[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/PNG/Default/icon_exclamationSmall.png" type="Texture" id=1]
[ext_resource path="res://assets/art/PNG/Default/icon_crossSmall.png" type="Texture" id=2]
[ext_resource path="res://assets/art/PNG/Default/meteor_large.png" type="Texture" id=3]
[ext_resource path="res://assets/art/PNG/Default/ship_A.png" type="Texture" id=4]
[ext_resource path="res://assets/art/PNG/Default/station_C.png" type="Texture" id=5]
[ext_resource path="res://MiniMap.gd" type="Script" id=6]

[node name="MiniMap" type="MarginContainer"]
margin_right = 170.0
margin_bottom = 170.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="NinePatchRect" parent="."]
modulate = Color( 0.160784, 0.160784, 0.160784, 1 )
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 165.0
texture = ExtResource( 3 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 165.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="Grid" type="TextureRect" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 144.0
stretch_mode = 2

[node name="PlayerMarker" type="Sprite" parent="MarginContainer/Grid"]
position = Vector2( 75, 75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="MobMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
modulate = Color( 0.792157, 0, 0, 1 )
position = Vector2( 32.0362, 33.371 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="AlertMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
modulate = Color( 1, 0.972549, 0.345098, 1 )
position = Vector2( 117.466, 105.452 )
texture = ExtResource( 1 )

[node name="PortalMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
modulate = Color( 0, 1, 0.27451, 0.843137 )
texture = ExtResource( 5 )

[connection signal="resized" from="." to="." method="_on_MiniMap_resized"]
